[package]
name = "fil_actor_tableland"
description = "Tableland actor for a Filecoin Subnet"
version = "11.0.0"
license = "MIT OR Apache-2.0"
authors = ["Tableland"]
edition = "2021"
repository = "https://github.com/filecoin-project/builtin-actors"
keywords = ["filecoin", "web3", "wasm", "tableland", "sqlite"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
cid = "0.8.6"
fil_actors_evm_shared = { version = "11.0.0", path = "../evm/shared" }
fil_actors_runtime = { version = "11.0.0", path = "../../runtime" }
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.3.3"
fvm_shared = { version = "3.2.0", default-features = false }
getrandom = { version = "0.2.10", features = ["custom"] }
multihash = { version = "0.16.3", default-features = false }
num-derive = "0.3.3"
num-traits = "0.2.15"
rusqlite = { git = "https://github.com/sanderpick/rusqlite.git", branch = "wasm32-unknown-unknown", features = ["bundled", "load_extension"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_ipld_dagcbor = "0.3.0"
serde_tuple = "0.5"
serde_with = "3.0.0"
sqlite-vfs = { git = "https://github.com/sanderpick/sqlite-vfs.git", branch = "wasm32-unknown-unknown" }
thiserror = "1.0.40"

[dev-dependencies]
fil_actors_runtime = { path = "../../runtime", features = ["test_utils"] }
serial_test = "2.0.0"
serde_json = "1.0.97"

[features]
fil-actor = ["fil_actors_runtime/fil-actor"]
